--- a/bookManagementSystem/bookManagementSystem.vcxproj
+++ b/bookManagementSystem/bookManagementSystem.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="book.h" />
     <ClInclude Include="borrowRecord.h" />
+    <ClInclude Include="LibraryManager.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
